fix bugs on typewriter effect, add animation on mobile navbar

--- a/src/components/FirstSection/index.scss
+++ b/src/components/FirstSection/index.scss
@@ -1,6 +1,9 @@
 .first-section {
   h1 {
     height: 42.4px;
+    margin-bottom: 42.4px;
+  }
+  .caret {
     border-right: 1px solid white;
     animation: caret-flash 1s step-start infinite;
   }
